      UnsupportedOperationException with the nCipher JCA provider.

version 9.12 (2021-08-11)
    * Increases MAX_HEADER_STRING_LENGTH from 10K to 20K to accommodate larger
      JOSE x5c header parameters (iss #440).

version 9.12.1 (2021-08-14)
    * Removes double quote (") characters from ParseException, JOSEException,
      BadJOSEException and other exception messages to make the strings
      compliant when used in OAuth 2.0 error_description strings. See RFC 6749,
      section 5.2.

version 9.13 (2021-08-22)
    * Adds support for ECDH public key authenticated encryption with JWE
      algorithm identifiers ECDH-1PU, ECDH-1PU+A128KW, ECDH-1PU+A128KW and
      ECDH-1PU+A256KW. See Public Key Authenticated Encryption for JOSE:
      ECDH-1PU (draft-madden-jose-ecdh-1pu-04).
    * Adds support for extended nonce ChaCha20-Poly1305 content encryption with
      JWE encryption method identifier XC20P. See Chacha derived AEAD
      algorithms in JSON Object Signing and Encryption (JOSE)
      (draft-amringer-jose-chacha-02).

version 9.14 (2021-09-16)
    * Adds a DefaultJWTClaimsVerifier.currentTime method that returns the
      current time for the purpose of "exp" (expiration time) and "nbf"
      (not-before time) claim verification. This method can be overridden to
      inject an alternative time provider (e.g. for testing purposes) or to
      disable "exp" and "nbf" verification.

version 9.15 (2021-09-23)
    * Adds RSA-OAEP-384 and RSA-OAEP-512 JWE algorithm support to RSAEncrypter
      and RSADecrypter.

version 9.15.1 (2021-09-26)
    * Updates RSAEncrypter to allow passing of SecretKey with "ChaCha20"
      algorithm (for enc=XC20P).

version 9.15.2 (2021-09-28)
    * DefaultJWTClaimsVerifier must report the names of missing required claims
      and prohibited claims in sorted order (iss #444).

version 9.16-preview.1 (2021-10-08)
    * JSONObjectUtils.getJSONObject must accept java.util.Map values (iss
      #445).